--- a/tuav2/index.html
+++ b/tuav2/index.html
@@ -6,6 +6,7 @@
     <title>tuav2</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <script language="javascript" src="http://imgcache.qq.com/tencentvideo_v1/tvp/js/tvp.player_v2.js" charset="utf-8"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=3Z118EsGzhwSSckxiiZAGuOAbh3FVdbQ"></script>
 </head>
 <body>
 <div id="app"></div>
