--- a/tua-mobile/index.html
+++ b/tua-mobile/index.html
@@ -8,6 +8,7 @@
     <meta content="telephone=no" name="format-detection">
     <meta content="email=no" name="format-detection">
     <title>tua-mobile</title>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=3Z118EsGzhwSSckxiiZAGuOAbh3FVdbQ"></script>
   </head>
   <body>
     <div id="app"></div>
