--- a/tua-mobile/index.html
+++ b/tua-mobile/index.html
@@ -8,6 +8,7 @@
     <meta content="telephone=no" name="format-detection">
     <meta content="email=no" name="format-detection">
     <title>tua-mobile</title>
+    <script language="javascript" src="http://imgcache.qq.com/tencentvideo_v1/tvp/js/tvp.player_v2.js" charset="utf-8"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=3Z118EsGzhwSSckxiiZAGuOAbh3FVdbQ"></script>
   </head>
   <body>
